Refactor : rename the file name in folder structure
